2012-04-02  Richard Guenther  <rguenther@suse.de>

PR rtl-optimization/52800
	* cprop.c (execute_rtl_cprop): Call cleanup_cfg with
	CLEANUP_CFG_CHANGED.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@186081 138bc75d-0d04-0410-961f-82ee72b054a4